Update link and export settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,5 @@
         "steganalizy",
         "zainicjalizować"
     ],
+    "markdown-pdf.headerTemplate": "<span class='title' style='display: none;'></span>"
 }
